// Vitest Snapshot v1

exports[`getCapabilities > should return driver with capabilities for android 1`] = `
{
  "capabilities": {
    "app": "foo.apk",
    "automationName": "UiAutomator2",
    "deviceName": "Test",
    "platformName": "Android",
    "platformVersion": undefined,
    "udid": undefined,
  },
}
`;

exports[`getCapabilities > should return driver with capabilities for android 2`] = `
{
  "capabilities": {
    "automationName": "UiAutomator2",
    "browserName": "Chrome",
    "deviceName": "Test",
    "platformName": "Android",
    "platformVersion": undefined,
    "udid": undefined,
  },
}
`;

exports[`getCapabilities > should return driver with capabilities for desktop 1`] = `
{
  "capabilities": {
    "browserName": "chrome",
  },
}
`;

exports[`getCapabilities > should return driver with capabilities for ios 1`] = `
{
  "capabilities": {
    "app": "foo.app",
    "automationName": "XCUITest",
    "deviceName": "fooName",
    "platformName": "iOS",
    "platformVersion": "fooNum",
    "udid": "num",
  },
}
`;

exports[`getCapabilities > should return driver with capabilities for ios 2`] = `
{
  "capabilities": {
    "automationName": "XCUITest",
    "browserName": "Safari",
    "deviceName": "iPhone Simulator",
    "platformName": "iOS",
    "platformVersion": undefined,
    "udid": undefined,
  },
}
`;
